feature: - university details          - core module to hold cache data source

--- a/idcmps-listing/src/main/res/navigation/navigation_universities.xml
+++ b/idcmps-listing/src/main/res/navigation/navigation_universities.xml
@@ -12,28 +12,24 @@
         android:name="com.example.idcmps_listing.presentation.ui.UniversitiesFragment"
         android:label="Universities Screen"
         tools:layout="@layout/fragment_universities_list" >
-    <!--    <action
-            android:id="@+id/action_naphiesDependentSettingFragment_to_naphiesConsentFragment"
-            app:destination="@id/naphiesConsentFragment"
-            app:enterAnim="@anim/enter_from_right"
-            app:exitAnim="@anim/exit_to_left"
-            app:popEnterAnim="@anim/enter_from_left"
-            app:popExitAnim="@anim/exit_to_right"/>-->
+        <action
+            android:id="@+id/action_DetailsFragment"
+            app:destination="@id/detailsFragment"
+        />
     </fragment>
 
-<!--    <fragment
-        android:id="@+id/naphiesConsentFragment"
-        android:name="com.lean.sehhaty.features.healthSummary.ui.naphiesConsent.NaphiesConsentFragment"
-        tools:layout="@layout/fragment_naphies_consent">
+    <fragment
+        android:id="@+id/detailsFragment"
+        android:name="com.example.idcmps_details.presentation.ui.UniversityDetailsFragment"
+        tools:layout="@layout/fragment_university_details">
 
         <argument android:name="allDependent"
             app:argType="boolean"
             android:defaultValue="false" />
-        <argument android:name="dependentNationalId"
+        <argument android:name="universityName"
             app:argType="string"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            />
 
-    </fragment>-->
+    </fragment>
 
 </navigation>
